--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                         <h1>Clientes de escritorio</h1>
                     </section>
                     <section>
-                        <h1>2</h1>
+                        <h1>Panorama Clientes de Escritorio</h1>
                     </section>
                     <section>
                         <h1>3</h1>
